# obsdesenfoque

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  background_filter.cpp  background_filter.h  blur_renderer.cpp  blur_renderer.h  gpu_shader.cpp  gpu_shader.h  plugin-main.cpp  plugin-main.h  segmentation_engine.cpp  segmentation_engine.h  settings.cpp  settings.h  utils.cpp  utils.h
.github/workflows/: build.yml
resources/locale/: en-US.ini  es-ES.ini
shaders/: composite.effect  gaussian.effect  mask.effect
